Alterou-se o nome do curso

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
-        <li>Integração Contínua</li>
+        <li>Curso de integração continua e seja lá mais o que for...</li>
         <li>Nome do novo curso</li>
     </ul>
 </body>
